--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
+    "http": "^0.0.1-security",
     "mongoose": "^6.2.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "socket.io": "^4.4.1"
   }
 }
