--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon --experimental-modules --es-module-specifier-resolution=node index"
+    "start": "node --experimental-modules --es-module-specifier-resolution=node index",
+    "dev": "nodemon --experimental-modules --es-module-specifier-resolution=node index"
   },
   "author": "",
   "license": "ISC",
