--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URL = mongodb+srv://vuanhlk12:vuanh123@cluster0.0ckgo.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+SECRET_KEY = vuanhbook
 PORT = 8800
