--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "helmet": "^5.0.2",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^6.2.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
