--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,10 @@
-version: "3"
-
+version: "2"
 services:
-  nodejs:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: nodejs
-    container_name: nodejs
-    restart: unless-stopped
-    env_file: .env
-    ports:
-      - "80:8080"
+  web:
+    build: .
+    command: npm start
     volumes:
-      - .:/home/node/app
-      - node_modules:/home/node/app/node_modules
-    networks:
-      - app-network
-    command: ./wait-for.sh db:27017 -- /home/node/app/node_modules/.bin/nodemon index.js
+      - .:/usr/app/
+      - /usr/app/node_modules
+    ports:
+      - "3000:3000"
